--- a/FidelityGenerativeAINanoDegree/project02_OpenAI_Chatbot_with_RAG/requirements.txt
+++ b/FidelityGenerativeAINanoDegree/project02_OpenAI_Chatbot_with_RAG/requirements.txt
@@ -1,10 +1,17 @@
-openai>=1.3.0
-python-dotenv>=1.0.0
-langchain>=0.1.0
-langchain-openai>=0.0.2
-langchain-community>=0.0.10
-faiss-cpu>=1.7.4
-tiktoken>=0.5.1
-wikipedia>=1.4.0
-beautifulsoup4>=4.12.2
-numpy>=1.24.1
+# Core AI and Language Model Dependencies
+openai>=1.3.0  # OpenAI API client for GPT models and embeddings
+langchain>=0.1.0  # Framework for building LLM applications
+langchain-openai>=0.0.2  # OpenAI-specific components for LangChain
+langchain-community>=0.0.10  # Community components including vector stores
+
+# Vector Storage and Search
+faiss-cpu>=1.7.4  # Facebook AI Similarity Search for efficient vector storage
+numpy>=1.24.1  # Required by FAISS for numerical operations
+
+# Text Processing and Tokenization
+tiktoken>=0.5.1  # OpenAI's tokenizer for text splitting
+beautifulsoup4>=4.12.2  # HTML parsing for cleaning Wikipedia content
+
+# Data Sources and Environment
+wikipedia>=1.4.0  # Python library for accessing Wikipedia content
+python-dotenv>=1.0.0  # Environment variable management for API keys
