--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-GenAINanoDegree/project02_OpenAI_Chatbot_with_RAG/.env
+GenAINanoDegree/project02_OpenAI_Chatbot_with_RAG/.env.secret
 .DS_Store
 GenAINanoDegree/project02_OpenAI_Chatbot_with_RAG.zip
