--- a/An_LLM_Query_Understanding_Service/requirements.txt
+++ b/An_LLM_Query_Understanding_Service/requirements.txt
@@ -4,3 +4,4 @@ torch>=2.0.0
 transformers>=4.32.0
 python-json-logger>=2.0.7
 redis>=5.0.0  # For caching with valkey
+accelerate>=0.21.0  # For model offloading and efficient device placement
